--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 }
 window.brunch['auto-reload'] = {
   enabled: true
-};</script></head><body><div id="background-image"><img src="/img/main-background.jpg"></div><div id="main-content"><div class="container"><div class="row"><div class="col-xs-12"><h1 class="title">droidcon Kraków 2016</h1><h4>coming soon</h4></div></div><div class="row contact-us"><div class="col-xs-12"><a href="mailto:contact@droidcon.pl">Contuct us</a></div></div></div></div></body></html>
+};</script></head><body><div id="background-image"><img src="/img/main-background.jpg"></div><div id="main-content"><div class="container"><div class="row"><div class="col-xs-12"><h1 class="title">droidcon Kraków 2016</h1><h4>coming soon</h4></div></div><div class="row contact-us"><div class="col-xs-12"><a href="mailto:contact@droidcon.pl">Contact us</a></div></div></div></div></body></html>
