--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 }
 window.brunch['auto-reload'] = {
   enabled: true
-};</script></head><body><div id="background-image"><img src="/img/logo.png" alt="droidcon Kraków main logo"><a href="mailto:contact@droidcon.pl">Contact us</a></div></body></html>
+};</script></head><body><div id="background-image"><img src="/img/logo.png" alt="droidcon Kraków main logo"><a href="mailto:contact@droidcon.pl" class="green-button">Contact us</a></div></body></html>
