--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   $('.modal').modal('hide');
   $( ".modal-backdrop" ).remove();
   $( ".in" ).remove();
-});</script><link href="http://droidcon.pl/stylesheets/app.357545ac2d5cb2bfa81b.css" rel="stylesheet"></head><body><my-app>Loading...</my-app><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+});</script><link href="http://2016.droidcon.pl/stylesheets/app.ed38a3b745b0a4776b6f.css" rel="stylesheet"></head><body><my-app>Loading...</my-app><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-68291226-1', 'auto');
-ga('send', 'pageview');</script><script type="text/javascript" src="http://droidcon.pl/js/polyfills.357545ac2d5cb2bfa81b.js"></script><script type="text/javascript" src="http://droidcon.pl/js/vendor.357545ac2d5cb2bfa81b.js"></script><script type="text/javascript" src="http://droidcon.pl/js/app.357545ac2d5cb2bfa81b.js"></script></body></html>
+ga('send', 'pageview');</script><script type="text/javascript" src="http://2016.droidcon.pl/js/polyfills.ed38a3b745b0a4776b6f.js"></script><script type="text/javascript" src="http://2016.droidcon.pl/js/vendor.ed38a3b745b0a4776b6f.js"></script><script type="text/javascript" src="http://2016.droidcon.pl/js/app.ed38a3b745b0a4776b6f.js"></script></body></html>
